--- a/css/sections/_carousel.css
+++ b/css/sections/_carousel.css
@@ -1,27 +1,102 @@
-/* .carousel {
+/* Layer priority */
+.layer-1 { z-index: 4; }
+.layer-2 { z-index: 3; }
+.layer-3 { z-index: 2; }
+.layer-4 { z-index: 1; }
+
+
+.carousel {
+    padding-top: 3rem;
+    padding-bottom: 5rem;
     text-align: center;
-
+    
     .grid {
-        display: grid;
-        grid-template-columns: auto;
-        justify-content: center;
-        justify-items: center;
 
-        .carousel-grid-container {
-            .carousel-wrapper {
-                display: grid;
-                grid-template-columns: auto;
-
-                .image-layers {
-                    display: flex;
-                    grid-template-columns: auto;
-                    grid-template-rows: 1fr;
+        
+        .carousel-title {
+            font-size: 27.9px;
+            font-weight: 800;
+            
+            @media (min-width: 768px) {
+                font-size: 33.5px;
+                
+                @media (min-width: 1400px) {
+                    font-size: 40px;
                 }
             }
         }
+    
+        #carousel-grid-container {
+            display: grid;
+            grid-template-columns: 1fr;
+            /* overflow-x: hidden; */
 
+            @media (min-width: 768px) {
+                
 
+                @media (min-width: 1400px) {
+                    
+                }
+            }
+        
+            .carousel-wrapper {
+                /* Make sure only the middle item is visible */
+                /* Adjust translation for other items */
 
+                transform: translateX(0); 
+                transition: transform 0.5s ease;
+
+                .carousel-grid {
+                    
+                    .carousel-item {
+                        display: grid;
+                        grid-template-columns: repeat(3, 1fr);
+                        gap: 1rem;
+                        justify-content: center;
+                        justify-items: center;
+                        
+                        .image-layers {
+                            display: grid;
+                            flex-direction: column;
+                            align-content: center;
+                            
+                            position: relative;
+                            width: 100%;
+                            height: 100%; 
+                            
+                            .layer {
+                                position: absolute;
+                                top: 0;
+                                left: 0;
+                                width: 100%;
+                                opacity: 1; 
+                                transition: opacity 0.3s ease-in-out;
+                                
+                                
+                            }
+                            
+                            .layer-1 {
+                                opacity: 1;
+                            }
+                            .layer-2 {
+                                display: flex;
+                                align-content: center;
+                                align-items: center;
+
+                                border-radius: 2rem;
+                                width: 85%;
+                            }
+                            .layer-3 {
+                                width: 90%;
+                            }
+                            .layer-4 {
+                
+                            }
+                        }
+                    }
+                }
+            }
+        }
 
         .carousel-text-container {
             display: grid;
@@ -30,67 +105,11 @@
             
             h3 {
                 font-weight: 800;
-                font-size: 21.6px;
+                /* font-size: 21.6px; */
             }
             p {
                 color: var(--color-gray-700);
             }
         }
-    }
-
-
-}
-
-.carousel-wrapper {
-    display: grid;
-}
-
- */
-/* ChatGPT */
-.image-layers {
-    position: relative;
-    width: 100%;
-    height: auto; 
-}
-
-.layer {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    opacity: 1; 
-    transition: opacity 0.3s ease-in-out;
-}
-
-.layer-1 { z-index: 4; }
-.layer-2 { z-index: 3; }
-.layer-3 { z-index: 2; }
-.layer-4 { z-index: 1; }
-
-@media (max-width: 768px) {
-    #carousel-grid-container {
-        display: grid;
-        grid-template-columns: 1fr;
-        overflow-x: hidden;
-    }
-
-    .carousel-wrapper {
-        /* Make sure only the middle item is visible */
-        transform: translateX(0); /* Adjust translation for other items */
-        transition: transform 0.5s ease;
-    }
-}
-
-@media (min-width: 769px) {
-    #carousel-grid-container {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-    }
-}
-
-@media (min-width: 1401px) {
-    #carousel-grid-container {
-        display: grid;
-        
     }
 }
