--- a/css/sections/_carousel.css
+++ b/css/sections/_carousel.css
@@ -1,10 +1,3 @@
-/* Layer priority */
-.layer-1 { z-index: 4; }
-.layer-2 { z-index: 3; }
-.layer-3 { z-index: 2; }
-.layer-4 { z-index: 1; }
-
-
 .carousel {
     padding-top: 3rem;
     padding-bottom: 5rem;
@@ -51,46 +44,65 @@
                     .carousel-item {
                         display: grid;
                         grid-template-columns: repeat(3, 1fr);
-                        gap: 1rem;
-                        justify-content: center;
-                        justify-items: center;
+                    
+                        gap: 5rem;
+                        /* justify-content: center;
+                        justify-items: center; */
                         
                         .image-layers {
                             display: grid;
-                            flex-direction: column;
-                            align-content: center;
-                            
+                            grid-template-rows: 1fr;
                             position: relative;
                             width: 100%;
                             height: 100%; 
                             
                             .layer {
-                                position: absolute;
+                                /* position: absolute; */
                                 top: 0;
                                 left: 0;
                                 width: 100%;
-                                opacity: 1; 
+                                opacity: .1; 
                                 transition: opacity 0.3s ease-in-out;
-                                
+                                /* display: grid;
+                                grid-template-rows: 1fr; */
                                 
                             }
-                            
+                            #image-4 {
+                                display: none;
+                            }
+                            #image-12 {
+                                display: none;
+                            }
                             .layer-1 {
+                                display: block;
+                                /* width: 110%;
+                                height: auto;
+                                top: -1.3rem;
+                                left: -1.1rem; */
+                                z-index: 5;
                                 opacity: 1;
                             }
-                            .layer-2 {
-                                display: flex;
-                                align-content: center;
-                                align-items: center;
-
-                                border-radius: 2rem;
-                                width: 85%;
+                            .layer-2 { 
+                                display: block;
+                                z-index: 3;
+                                
+                                width: 90%;
+                                height: auto;
                             }
                             .layer-3 {
+                                display: block;
+                                z-index: 2;
+                                opacity: 1;
+    
                                 width: 90%;
+                                height: auto;
+    
+                                border-radius: 3rem;
                             }
                             .layer-4 {
-                
+                                display: block;
+                                z-index: 1;
+                                opacity: 1;
                             }
                         }
                     }
