--- a/css/other/_variables.css
+++ b/css/other/_variables.css
@@ -53,11 +53,17 @@
     rgba(241,244,253,0) 83%
     ); */
 
-    --linear-gradient: linear-gradient(355deg, 
+    --linear-gradient-sc-sec: linear-gradient(355deg, 
     rgba(99,102,241,0.1) 0%, 
     rgba(218,70,239,0.05) 42%, 
     rgba(241,244,253,0.07) 83%
     );
+    --linear-gradient-c-sec: linear-gradient(355deg, 
+    rgba(99,102,241,0.1) 0%, 
+    rgba(218,70,239,0.05) 42%, 
+    rgba(241,244,253,0.07) 83%
+    );
+
 
 
     /* NAVIGATION BAR COLOURS */
