--- a/css/sections/_brands.css
+++ b/css/sections/_brands.css
@@ -1,6 +1,6 @@
 #brands { 
-    grid-area: brands;
-    
+    grid-area: brands-section;
+
     display: none; 
     #brand-5, #brand-6 { display: none; }
 
