--- a/css/sections/_showcase.css
+++ b/css/sections/_showcase.css
@@ -1,5 +1,5 @@
 #showcase {
-    grid-area: showcase;
+    grid-area: showcase-section;
     padding-bottom: 2rem;
     
     @media (min-width: 768px) {
